--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
 <div class="some">some data</div>
 <script src="start.js"></script>
-<!--<table>
+<table>
 
     <tbody id="item-container-0" class="item item-live-7d9e91bec623e2a8604827153a29ee97" data-seller="NirotalAiri" data-sellerid="None" data-buyout="17 chaos" data-ign="Nirotal" data-league="Harbinger" data-name="Slivertongue Harbinger Bow" data-tab="asd" data-x="4" data-y="6">
     <tr class="first-line">
@@ -133,7 +133,7 @@
     </tr>
     </tbody>
 
-</table>-->
+</table>
 
 
 </body>
